Simple fix for unecessary scrollbars.

--- a/src/client/components/Navigation/TopNavBar.scss
+++ b/src/client/components/Navigation/TopNavBar.scss
@@ -19,7 +19,7 @@
  * @Author: Michael Harrison
  * @Date:   2019-03-29T10:46:51+11:00
  * @Last modified by:   Michael Harrison
- * @Last modified time: 2019-04-15T08:42:09+10:00
+ * @Last modified time: 2019-04-21T13:31:29+10:00
  */
 
 @import "../../style/global_colors.scss";
@@ -36,7 +36,7 @@
   max-height: 76px;
   padding-top: 21px;
   padding-bottom: 21px;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   @media screen and (max-width: 420px) {
     display: none;
